# drf-apischema

./: README.md  pyproject.toml
docs/: old.md
playground/api/: urls.py  views.py
playground/playground/: settings.py
src/drf_apischema/: __init__.py  core.py  inspectors.py  plumbing.py  settings.py  urls.py
src/drf_apischema/drf_yasg/: __init__.py
src/drf_apischema/locale/zh_HAns/LC_MESSAGES/: django.mo  django.po
tests/api/: tests.py  views.py
tests/manage/: settings.py
