[project]
name = "drf-apischema"
version = "0.1.0"
description = "Add your description here"
authors = []
dependencies = [
    "django>=5.1",
    "drf-yasg>=1.21.7",
    "django-restframework>=0.0.1",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/drf_apischema"]
